--- a/public/css/theme-arc-red.css
+++ b/public/css/theme-arc-red.css
@@ -273,6 +273,17 @@
     background-color: var(--color-primary-dark-2) !important; /* "green" button hover color, only this one has active element, primary buttons use --color-primary-dark-2 */
 }
 
+.ui.basic.green.button {
+    color: var(--color-red) !important; /* reset color as in danger zone */
+    border-color: var(--color-red) !important; /* reset color as in danger zone */
+    background-color: unset !important; /* reset color of reopen issue button as in danger zone */
+}
+
+.ui.basic.green.button:hover {
+    color: var(--color-red-dark-1) !important; /* reset color as in danger zone */
+    border-color: var(--color-red-dark-1) !important; /* reset color as in danger zone */
+    background-color: unset !important; /* reset color of reopen issue button as in danger zone */
+}
 
 .ui.red.button {
     background-color: var(--color-primary-dark-4) !important; /* red button color (e.g., Confirm Deletion, Remove) */
@@ -284,7 +295,7 @@
 }
 
 .ui.basic.red.button {
-    background-color: unset !important; /* reset colors in danger zone */
+    background-color: unset !important; /* reset color in danger zone */
 }
 
 /* reconsidered: .ui.active.button:hover, .ui.active.button:active */
