--- a/public/css/theme-auto-red.css
+++ b/public/css/theme-auto-red.css
@@ -37,7 +37,18 @@
         background-color: var(--color-primary-dark-2) !important; /* "green" button hover color, only this one has active element, primary buttons use --color-primary-dark-2 */
     }
     
+    .ui.basic.green.button {
+        color: var(--color-red) !important; /* reset color as in danger zone */
+        border-color: var(--color-red) !important; /* reset color as in danger zone */
+        background-color: unset !important; /* reset color of reopen issue button as in danger zone */
+    }
     
+    .ui.basic.green.button:hover {
+        color: var(--color-red-dark-1) !important; /* reset color as in danger zone */
+        border-color: var(--color-red-dark-1) !important; /* reset color as in danger zone */
+        background-color: unset !important; /* reset color of reopen issue button as in danger zone */
+    }
+        
     .ui.red.button {
         background-color: var(--color-primary-dark-4) !important; /* red button color (e.g., Confirm Deletion, Remove) */
         /* color: var(--color-body) !important; */ /* reconsidered: text color overrides text color for some buttons (e.g., Transfer Ownership) */
@@ -48,7 +59,7 @@
     }
     
     .ui.basic.red.button {
-        background-color: unset !important; /* reset colors in danger zone */
+        background-color: unset !important; /* reset color in danger zone */
     }
     
     /* not needed: .ui.basic.red.button:hover */
@@ -350,7 +361,18 @@
         background-color: var(--color-primary-dark-2) !important; /* "green" button hover color, only this one has active element, primary buttons use --color-primary-dark-2 */
     }
 
-
+    .ui.basic.green.button {
+        color: var(--color-red) !important; /* reset color as in danger zone */
+        border-color: var(--color-red) !important; /* reset color as in danger zone */
+        background-color: unset !important; /* reset color of reopen issue button as in danger zone */
+    }
+    
+    .ui.basic.green.button:hover {
+        color: var(--color-red-dark-1) !important; /* reset color as in danger zone */
+        border-color: var(--color-red-dark-1) !important; /* reset color as in danger zone */
+        background-color: unset !important; /* reset color of reopen issue button as in danger zone */
+    }
+    
     .ui.red.button {
         background-color: var(--color-primary-dark-4) !important; /* red button color (e.g., Confirm Deletion, Remove) */
         /* color: var(--color-body) !important; */ /* reconsidered: text color overrides text color for some buttons (e.g., Transfer Ownership) */
@@ -361,7 +383,7 @@
     }
 
     .ui.basic.red.button {
-        background-color: unset !important; /* reset colors in danger zone */
+        background-color: unset !important; /* reset color in danger zone */
     }
 
     /* reconsidered: .ui.active.button:hover, .ui.active.button:active */
