--- a/public/css/theme-red.css
+++ b/public/css/theme-red.css
@@ -9,7 +9,7 @@
     --color-primary-light-4: #d54455 !important; /* fewest contributions heatmap */
     /* reconsidered: --color-background */
     /* no contributions heatmap is okay */
-    --fonts-monospace: ui-monospace, "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace, var(--fonts-emoji) !important; /* replaced "SFMono-Regular" */
+    --fonts-monospace: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace, var(--fonts-emoji) !important;
 }
 
 /* reconsidered: .full.height */
