--- a/public/css/theme-auto-red.css
+++ b/public/css/theme-auto-red.css
@@ -12,8 +12,8 @@
         --color-primary-light-4: #d54455 !important; /* fewest contributions heatmap */
         /* reconsidered: --color-background */
         /* no contributions heatmap is okay */
-        --fonts-monospace: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace, var(--fonts-emoji) !important;
-    }
+        /* no longer needed: --fonts-monospace */
+}
     
     /* reconsidered: .full.height */
     
@@ -312,8 +312,8 @@
         --color-active-line: #534d1b;
         accent-color: var(--color-accent);
         color-scheme: dark;
-        --fonts-monospace: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace, var(--fonts-emoji) !important;
-    }
+        /* no longer needed: --fonts-monospace */
+}
 
     /* invert emojis that are hard to read otherwise */
     .emoji[aria-label="check mark"],
