--- a/public/css/theme-auto-red.css
+++ b/public/css/theme-auto-red.css
@@ -4,18 +4,13 @@
     :root {
         --color-primary: #cd041c !important; /* moderate contributions heatmap, primary email address label, Regenerate Scratch Token, and more (below) */
         --color-primary-dark-2: #ab0316 !important; /* greater contributions heatmap and more (below) */
-        /* reconsidered: --color-primary-dark-3 */
         --color-primary-dark-4: #870312 !important; /* red buttons and greatest contributions heatmap */
         --color-primary-dark-6: #5f020d !important; /* red buttons hover */
         --color-primary-light-1: #d1152b !important; /* selection color */
         --color-primary-light-2: #ce2236 !important; /* fewer contributions heatmap */
         --color-primary-light-4: #d54455 !important; /* fewest contributions heatmap */
-        /* reconsidered: --color-background */
         /* no contributions heatmap is okay */
-        /* no longer needed: --fonts-monospace */
-}
-    
-    /* reconsidered: .full.height */
+    }
     
     .home a {
         color: var(--color-primary) !important; /* link and link hover color on home page, other links use --color-primary */
@@ -48,10 +43,9 @@
         border-color: var(--color-primary-dark-2) !important; /* reset color as in danger zone */
         background-color: unset !important; /* reset color of reopen issue button as in danger zone */
     }
-        
+    
     .ui.red.button {
         background-color: var(--color-primary-dark-4) !important; /* red button color (e.g., Confirm Deletion, Remove) */
-        /* color: var(--color-body) !important; */ /* reconsidered: text color overrides text color for some buttons (e.g., Transfer Ownership) */
     }
     
     .ui.red.button:hover {
@@ -62,34 +56,16 @@
         background-color: unset !important; /* reset color in danger zone */
     }
     
-    /* not needed: .ui.basic.red.button:hover */
-    /* reconsidered: .ui.active.button:hover, .ui.active.button:active */
-    /* reconsidered: .ui.tabular.menu.navbar */
-    /* not needed: .ui.secondary.pointing.tabular.top.attached.borderless.menu.stackable.new-menu.navbar.shadow-body .active.item */
-    /* not needed: .ui.secondary.pointing.tabular.top.attached.borderless.menu.stackable.new-menu.navbar .active.item */
-    /* reconsidered: .ui.top.attached.pull.tabular.stackable.menu .active.item */
-    /* reconsidered: .ui.top.tabular.menu .active.write.item */
-    /* not needed: .ui.top.attached.tabular.menu .active.item */
-    /* reconsidered, re-ordered: #repo-files-table tr:hover */
-    /* not needed: .repository .diff-detail-box */
-    
     details {
         background-color: var(--color-secondary-light-2); /* make collapsible elements easier to distinguish from main body */
         border-radius: 4px; /* same as code blocks */
         padding: .2em .4em; /* same as code blocks */
     }
-    
-    /* reconsidered: .js-clone-url */
-    /* not needed: .color-preview */
-    /* not needed: .markup table tr:nth-child(2n) */
-    /* reconsidered: .added-code */
 }
 
 @media (prefers-color-scheme: dark) {
-    /* root and emoji source: https://github.com/go-gitea/gitea/blob/main/web_src/css/themes/theme-arc-green.css */
-    /* some root colors and one alpha are customized */
+    /* some root colors are customized */
     /* custom colors are slightly brighter */
-    /* custom alpha is slightly more transparent */
 
     /* @import "../chroma/base.css"; */
     /* @import "../chroma/dark.css"; */
@@ -312,8 +288,7 @@
         --color-active-line: #534d1b;
         accent-color: var(--color-accent);
         color-scheme: dark;
-        /* no longer needed: --fonts-monospace */
-}
+    }
 
     /* invert emojis that are hard to read otherwise */
     .emoji[aria-label="check mark"],
@@ -338,8 +313,6 @@
     .emoji[aria-label="musical notes"] {
         filter: invert(100%) hue-rotate(180deg);
     }
-
-    /* not needed: .full.height */
 
     .home a {
         color: var(--color-primary) !important; /* link and link hover color on home page, other links use --color-primary */
@@ -366,16 +339,15 @@
         border-color: var(--color-primary) !important; /* reset color as in danger zone */
         background-color: unset !important; /* reset color of reopen issue button as in danger zone */
     }
-    
+
     .ui.basic.green.button:hover {
         color: var(--color-primary-dark-2) !important; /* reset color as in danger zone */
         border-color: var(--color-primary-dark-2) !important; /* reset color as in danger zone */
         background-color: unset !important; /* reset color of reopen issue button as in danger zone */
     }
-    
+
     .ui.red.button {
         background-color: var(--color-primary-dark-4) !important; /* red button color (e.g., Confirm Deletion, Remove) */
-        /* color: var(--color-body) !important; */ /* reconsidered: text color overrides text color for some buttons (e.g., Transfer Ownership) */
     }
 
     .ui.red.button:hover {
@@ -386,27 +358,9 @@
         background-color: unset !important; /* reset color in danger zone */
     }
 
-    /* reconsidered: .ui.active.button:hover, .ui.active.button:active */
-    /* not needed: .ui.tabular.stackable.menu.navbar .active.item */
-    /* not needed: .ui.secondary.pointing.tabular.top.attached.borderless.menu.stackable.new-menu.navbar.shadow-body .active.item */
-    /* reconsidered: .ui.secondary.pointing.tabular.top.attached.borderless.menu.stackable.new-menu.navbar .active.item */
-    /* reconsidered: .ui.top.attached.pull.tabular.stackable.menu .active.item */
-    /* not needed: .ui.top.tabular.menu .active.write.item */
-    /* reconsidered: .ui.top.attached.tabular.menu .active.item */
-    /* reconsidered, re-ordered: #repo-files-table tr:hover */
-    /* not needed: .repository .diff-detail-box */
-
     details {
         background-color: var(--color-secondary-light-2); /* make collapsible elements easier to distinguish from main body */
         border-radius: 4px; /* same as code blocks */
         padding: .2em .4em; /* same as code blocks */
     }
-
-    /* reconsidered: .js-clone-url */
-    /* not needed: .color-preview */
-    /* not needed: .markup table tr:nth-child(2n) */
-    /* reconsidered: .added-code */
-    /* not needed: .ui.table>thead>tr>th */
-    /* not needed: .ui.table>thead>tr:first-child>th:first-child */
-    /* not needed: .ui.table>thead>tr:first-child>th:last-child */
 }
