--- a/public/css/theme-auto-red.css
+++ b/public/css/theme-auto-red.css
@@ -9,6 +9,7 @@
         --color-primary-light-1: #d1152b !important; /* selection color */
         --color-primary-light-2: #ce2236 !important; /* fewer contributions heatmap */
         --color-primary-light-4: #d54455 !important; /* fewest contributions heatmap */
+        --color-primary-hover: var(--color-primary-dark-2) !important; /* send account recovery email, save, search, clone buttons */
         /* no contributions heatmap is okay */
     }
     
@@ -28,8 +29,8 @@
         background-color: var(--color-primary) !important; /* "green" button color (e.g., Sign In, Verify), primary buttons use --color-primary */
     }
     
-    .ui.green.button:hover, .ui.green.button:active {
-        background-color: var(--color-primary-dark-2) !important; /* "green" button hover color, only this one has active element, primary buttons use --color-primary-dark-2 */
+    .ui.green.button:hover {
+        background-color: var(--color-primary-dark-2) !important; /* "green" button hover color, primary buttons use --color-primary-dark-2 */
     }
     
     .ui.basic.green.button {
@@ -98,7 +99,7 @@
         --color-primary-alpha-70: #87ab63b3;
         --color-primary-alpha-80: #87ab63cc;
         --color-primary-alpha-90: #87ab63e1;
-        --color-primary-hover: var(--color-primary-light-1);
+        --color-primary-hover: var(--color-primary-dark-2) !important; /* was var(--color-primary-light-1), send account recovery email, save, search, clone buttons */
         --color-primary-active: var(--color-primary-light-2);
         --color-secondary: #525767;
         --color-secondary-dark-1: #5c6374;
@@ -330,8 +331,8 @@
         background-color: var(--color-primary) !important; /* "green" button color (e.g., Sign In, Verify), primary buttons use --color-primary */
     }
 
-    .ui.green.button:hover, .ui.green.button:active {
-        background-color: var(--color-primary-dark-2) !important; /* "green" button hover color, only this one has active element, primary buttons use --color-primary-dark-2 */
+    .ui.green.button:hover {
+        background-color: var(--color-primary-dark-2) !important; /* "green" button hover color, primary buttons use --color-primary-dark-2 */
     }
 
     .ui.basic.green.button {
